--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,20 @@ body {
 .menu-ul li a {
   text-decoration: none;
   color: #000;
+  width: 100%;
+  height: 100%;
   font-family: "Gang Of Three";
   font-size: 20px;
 }
 
+.menu-item {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
 .menu-item:hover {
   transform: scale(1.10);
-  border-bottom: 4px solid black;
   transition: 350ms all;
   text-shadow: 0 0 10px #700000;
 }
@@ -163,4 +170,34 @@ footer ul{
   align-items: center;
   margin: auto;
   justify-content: center;
+}
+
+@media screen and (max-width: 767px) {
+  input, select, textarea {
+    margin-bottom: 15px;
+    font-size: 45px;
+    padding: 5px;
+    border: none;
+    background-color: rgba(180, 0, 0, 0.05);
+    border-radius: 3px;
+  }
+
+  .menu-ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .menu-ul li a {
+    text-decoration: none;
+    color: #000;
+    font-family: "Gang Of Three";
+    font-size:15px;
+  }
+
+  .menu-item {
+    padding: 15px;
+  }
 }
